# ChatAD

./: .gitignore  Procfile  README.md  env.example  main.py  pyproject.toml  railway.json  start_chatad.sh  start_http_server.sh
crawlers/: adni.py  adni_curate.py
data/: adni_raw.json
mcp_server/: http_server.py  server.py  test_server.py
results/: adni.json
